--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
       <p><a href="http://blog.margaretleibovic.com">Margaret Leibovic</a></p>
     </header>
 
-    <div class="slide" id="cover"><div>
+    <div class="slide" id="1"><div>
       <section>
         <header>
           <h2>Building Your First Mobile Web App</h2>
         </header>
         <footer class="byline"><a href="http://blog.margaretleibovic.com">Margaret Leibovic</a></footer>
+        <footer class="byline"><a href="http://twitter.com/mleibovic">@mleibovic</a></footer>
+        <img style="float: right;" src="pictures/firefox-phone.png">
       </section>
     </div></div>
 
@@ -46,7 +48,7 @@
       </section>
     </div></div>
 
-    <div class="slide" id="2"><div>
+    <div class="slide" id="3"><div>
       <section>
         <header>
           <h2>Publishing your app</h2>
@@ -59,23 +61,23 @@
     </div></div>
 
 
-    <div class="slide shout" id="3"><div>
+    <div class="slide shout" id="4"><div>
       <section>
         <h2 class="smaller">Let's build an app!</h2>
       </section>
     </div></div>
 
-    <div class="slide" id="2"><div>
-      <section>
-        <header>
+    <div class="slide" id="5"><div>
+      <section style="text-align:center;">
+        <header style="margin-bottom:10px;">
           <h2>Demo app: stopwatch</h2>
         </header>
-        <img src=""/>
+        <img src="pictures/stopwatch.png"/>
       </section>
     </div></div>
 
 
-    <div class="slide" id="2"><div>
+    <div class="slide" id="6"><div>
       <section>
         <header>
           <h2>Make your own copy of stopwatch</h2>
@@ -89,7 +91,7 @@
       </section>
     </div></div>
 
-    <div class="slide" id="2"><div>
+    <div class="slide" id="7"><div>
       <section>
         <header>
           <h2>Get a local copy of stopwatch</h2>
@@ -103,7 +105,7 @@
       </section>
     </div></div>
 
-    <div class="slide" id="2"><div>
+    <div class="slide" id="8"><div>
       <section>
         <header>
           <h2>Pushing local changes back to github</h2>
@@ -117,13 +119,13 @@
       </section>
     </div></div>
 
-    <div class="slide shout" id="3"><div>
+    <div class="slide shout" id="9"><div>
       <section>
         <h2 class="smaller">Let's start building this app!</h2>
       </section>
     </div></div>
 
-    <div class="slide" id="2"><div>
+    <div class="slide" id="10"><div>
       <section>
         <header>
           <h2>Creating HTML to build a stopwatch</h2>
@@ -135,7 +137,7 @@
       </section>
     </div></div>
 
-    <div class="slide" id="2"><div>
+    <div class="slide" id="11"><div>
       <section>
         <header>
           <h2>Adding CSS to style the stopwatch</h2>
@@ -149,7 +151,7 @@
       </section>
     </div></div>
 
-    <div class="slide" id="2"><div>
+    <div class="slide" id="12"><div>
       <section>
         <header>
           <h2>Adding JS to make stopwatch actually work</h2>
@@ -164,7 +166,7 @@
       </section>
     </div></div>
 
-    <div class="slide" id="2"><div>
+    <div class="slide" id="13"><div>
       <section>
         <header>
           <h2>Making the app installable</h2>
@@ -177,7 +179,7 @@
       </section>
     </div></div>
 
-    <div class="slide" id="2"><div>
+    <div class="slide" id="14"><div>
       <section>
         <header>
           <h2>Testing on a mobile device</h2>
@@ -191,13 +193,13 @@
       </section>
     </div></div>
 
-    <div class="slide shout" id="3"><div>
+    <div class="slide shout" id="15"><div>
       <section>
         <h2 class="smaller">Make it your own</h2>
       </section>
     </div></div>
 
-    <div class="slide" id="2"><div>
+    <div class="slide" id="16"><div>
       <section>
         <header>
           <h2>Ideas for future stopwatch features</h2>
@@ -211,7 +213,7 @@
       </section>
     </div></div>
 
-    <div class="slide" id="2"><div>
+    <div class="slide" id="17"><div>
       <section>
         <header>
           <h2>More resources</h2>
