add more content

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <h2>Basics of a web app</h2>
         </header>
         <ul>
+          <li>The basic pieces of a web app are the same as a web page</li>
           <li><a href="https://developer.mozilla.org/learn/html">HTML</a>: Creates structure for content</li>
           <li><a href="https://developer.mozilla.org/learn/css">CSS</a>: Styles appearance</li>
           <li><a href="https://developer.mozilla.org/learn/javascript">JavaScript</a>: Enables interaction</li>
@@ -54,7 +55,8 @@
           <h2>Publishing your app</h2>
         </header>
         <ul>
-          <li><a href="https://developer.mozilla.org/en-US/Apps/Developing/Manifest">manifest.webapp</a></li>
+          <li>To make your app installable, you just need to add one extra file</li>
+          <li><a href="https://developer.mozilla.org/en-US/Apps/Developing/Manifest">manifest.webapp</a>: Holds metadata about your app</li>
           <li><a href="https://marketplace.firefox.com/developers/docs/quick_start">Packaged apps vs. hosted apps</a></li>
         </ul>
       </section>
@@ -74,6 +76,7 @@
         <ul>
           <li>Create a <a href="http://github.com">github</a> account if you don't have one</li>          
           <li>Hit the "fork" button on my <a href="https://github.com/leibovic/stopwatch/">stopwatch repo page</a></li>
+          <li>In Settings, Make sure you have the <code>gh-pages</code> branch set as the default branch</li>
           <li>Try making a simple commit on the website, such as editing the <code>README</code> file</li>
           <li>See your app in action at http://yourusername.github.com/stopwatch/</li>
         </ul>
@@ -86,6 +89,7 @@
           <h2>Get a local copy of stopwatch</h2>
         </header>
         <ul>
+          <li>You can edit files directly on github's website, but developing locally is easier if you're going to make a lot of changes</li>
           <li>Make sure <a href="">git</a> is installed on your computer</li>    
           <li>In a terminal, navigate to where you want to keep your app files</li>      
           <li>Run <code>git clone https://github.com/yourgithubusername/stopwatch.git</code></li>          
@@ -186,7 +190,7 @@
           <li>Run <code>git add .</code> to stage your changes</li>
           <li>Run <code>git commit -m "your commit message"</code> to commit your changes</li>
           <li>Run <code>git push</code> to push your changes</li>
-          <li>If you're new to git, <a href="http://try.github.io/levels/1/challenges">here's a good interactive tutorial</a></li>
+          <li>If you're new to git, <a href="http://try.github.io/">here's a good interactive tutorial</a></li>
         </ul>
       </section>
     </div></div>
